--- a/Dockerfile2
+++ b/Dockerfile2
@@ -33,6 +33,7 @@ RUN apt-get update && \
        less \
        nodejs-legacy \
        npm \
+       curl tmux screen nano traceroute asciinema hollywood libmagic-dev \
        && apt-get purge && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
@@ -63,11 +64,66 @@ RUN pip install --no-cache-dir \
     notebook==5.0.0 \
     jupyterhub==0.7.2 \
     ipywidgets==6.0.0 \
+    lxml==4.1.1 \
+    bash_kernel
+    unidecode==0.04.21 \
     jupyterlab==0.24.1 && \
 jupyter nbextension enable --py widgetsnbextension --sys-prefix && \
-jupyter serverextension enable --py jupyterlab --sys-prefix
+jupyter serverextension enable --py jupyterlab --sys-prefix && \
+python -m bash_kernel.install --sys-prefix
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    fonts-dejavu \
+    tzdata \
+    gfortran \
+    gcc && apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+USER $NB_USER
+
+# R packages
+RUN conda install --quiet --yes \
+    'r-base=3.3.2' \
+    'r-irkernel=0.7*' \
+    'r-plyr=1.8*' \
+    'r-devtools=1.12*' \
+    'r-tidyverse=1.0*' \
+    'r-shiny=0.14*' \
+    'r-rmarkdown=1.2*' \
+    'r-forecast=7.3*' \
+    'r-rsqlite=1.1*' \
+    'r-reshape2=1.4*' \
+    'r-nycflights13=0.2*' \
+    'r-caret=6.0*' \
+    'r-rcurl=1.95*' \
+    'r-crayon=1.3*' \
+    'r-randomforest=4.6*' && \
+    conda clean -tipsy && \
+    fix-permissions $CONDA_DIR
+
+USER $NB_USER
+
+RUN pip install --no-cache-dir bash_kernel seaborn jupyterhub==0.7.2 \
+    lxml==4.1.1 unidecode==0.04.21 && \
+    python -m bash_kernel.install --sys-prefix
 
 
+USER $NB_USER
+
+RUN git clone https://github.com/PLOS/allofplos /home/$NB_USER/allofplos
+
+RUN pip install -e allofplos
+
+ADD smoke_test.py .
+
+RUN python -c "from allofplos.plos_corpus import create_test_plos_corpus; create_test_plos_corpus()"
+
+RUN git clone https://github.com/eseiver/xml_tutorial /home/$NB_USER/xml_tutorial
+
+ADD . /home/$NB_USER/
+
+RUN ls -lah && pwd
 
 # Copy and chown stuff. This doubles the size of the repo, because
 # you can't actually copy as USER, only as root! Thanks, Docker!
